<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.ListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/resourcesActivityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resources_button_text" />

        <Button
            android:id="@+id/interactionsActivityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interactions_button_text" />


        <Button
            android:id="@+id/lifeCycleActivityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/life_cycle_button_text" />

        <Button
            android:id="@+id/senderActivityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sender_button_text" />

        <Button
            android:id="@+id/userActivityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_button_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>