<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.StoredUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/firstname" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/lastname" />

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number" />

        <Button
            android:id="@+id/storeUserButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/storeUserButtonText" />

        <Button
            android:id="@+id/cleanUserButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cleanUserButtonText" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>